--- a/ruc_List.html
+++ b/ruc_List.html
@@ -2,12 +2,54 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Firmadocumental List</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+      <meta name="description" content="" />
+      <meta name="author" content="" />
+      <title>JOVSA Firmas</title>
+      <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+      <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+      <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+      <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+      <link href="css/styles.css" rel="stylesheet" />
+    <style>
+      body {
+        background-image: url('assets/img/header-bg.jpg'); /* Cambia esta ruta a la de tu imagen */
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+      }
+      #root {
+        width: 80%; /* Cambia este valor según tus preferencias */
+        background-color: rgba(255, 255, 255, 0.8); /* Este es un fondo blanco semi-transparente para que el texto sea legible */
+        padding: 20px;
+        border-radius: 10px;
+      }
+    </style>
   </head>
-  <body>
+  <body id="page-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">JOVSA Firmas</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          Menu
+          <i class="fas fa-bars ms-1"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+            <li class="nav-item"><a class="nav-link" href="documental_form.html">Ingresar Firma Documental</a></li>
+            <li class="nav-item"><a class="nav-link" href="documental_list.html">Firmas Documentales</a></li>
+            <li class="nav-item"><a class="nav-link" href="legal_Form.html">Ingresar Firma Representante legal</a></li>
+            <li class="nav-item"><a class="nav-link" href="legal_List.html">Firmas Representante legal</a></li>
+            <li class="nav-item"><a class="nav-link" href="ruc_Form.html">Ingresar Firma con Ruc</a></li>
+            <li class="nav-item"><a class="nav-link" href="ruc_List.html">Firmas con Ruc</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div id="root"></div>
     <script type="module" src="/src/ruc_list.jsx"></script>
   </body>
