--- a/ruc_List.html
+++ b/ruc_List.html
@@ -14,7 +14,7 @@
       <link href="css/styles.css" rel="stylesheet" />
     <style>
       body {
-        background-image: url('assets/img/header-bg.jpg'); /* Cambia esta ruta a la de tu imagen */
+        background-image: url('assets/img/header-bg.jpg');
         background-size: cover;
         display: flex;
         justify-content: center;
@@ -23,8 +23,8 @@
         margin: 0;
       }
       #root {
-        width: 80%; /* Cambia este valor según tus preferencias */
-        background-color: rgba(255, 255, 255, 0.8); /* Este es un fondo blanco semi-transparente para que el texto sea legible */
+        width: 80%;
+        background-color: rgba(255, 255, 255, 0.8);
         padding: 20px;
         border-radius: 10px;
       }
