--- a/documental_form.html
+++ b/documental_form.html
@@ -16,15 +16,15 @@
 
       <style>
         body {
-          background-image: url('assets/img/header-bg.jpg'); /* Cambia esta ruta a la de tu imagen */
+          background-image: url('assets/img/header-bg.jpg'); 
           background-size: cover;
-          padding-top: 70px; /* Ajusta este valor según la altura de tu navbar */
+          padding-top: 70px; 
         }
         #root {
-          width: 80%; /* Cambia este valor según tus preferencias */
-          max-width: 800px; /* Ajusta este valor según tus preferencias */
+          width: 80%; 
+          max-width: 800px; 
           margin: 0 auto;
-          background-color: rgba(255, 255, 255, 0.8); /* Este es un fondo blanco semi-transparente para que el texto sea legible */
+          background-color: rgba(255, 255, 255, 0.8); 
           padding: 0px;
           border-radius: 10px;
         }
